fix: update motion properties in About and Pricing sections for improved animation behavior; enhance scrollbar styles in global CSS

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,15 @@ html{
 [id]{
     @apply scroll-mt-30;
 }
+
+::-webkit-scrollbar-thumb{
+    @apply bg-gradient-to-b from-violet-900 to-blue-950 rounded-md;
+}
+
+
+::-webkit-scrollbar{
+    @apply w-1;
+}
+::-webkit-scrollbar-button{
+    @apply hidden;
+}
